Refactor to store available trades on clients